--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
     <body>
         <hi>Abbey Elliott's CSCE 190 Site</h1>
 
+        <!-- Probelm Statement Assignment-->
         <section class="assignment">
             <a href="files/problem-statement.pdf"><img src="images/problem-statement.png"></a>
             <section class="ass-details">
                 <a href="files/problem-statement.pdf"><h2>Problem Statement: Pet-Friendly Locations</h2></a>
                 <p>
                 Pet owners need an easy way to learn which locations in a certain city or place allow pets because oftentimes they have to forgo activities or experiences merely because they did not realize that it was not “pet-friendly” before arriving there. They need a way to put a stop to mans’ best friend being left out.
+                </p>
+            </section>
+        </section>
+
+        <!-- Affinitiy Diagram Assignment-->
+        <section class="assignment">
+            <a href="files/affinity_diagram.pdf"><img src="images/affinity_diagram.png"></a>
+            <section class="ass-details">
+                <a href="files/Affinity_Diagram.pdf"><h2>Affinity Diagram: Pet-Friendly Locations</h2></a>
+                <p>
+                    My group and I worked together to brainstorm all things about pet friendly locations.
                 </p>
             </section>
         </section>
