--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
         <!-- Affinitiy Diagram Assignment-->
         <section class="assignment">
-            <a href="files/affinity_diagram.pdf"><img src="images/affinity_diagram.png"></a>
+            <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.png"></a>
             <section class="ass-details">
-                <a href="files/Affinity_Diagram.pdf"><h2>Affinity Diagram: Pet-Friendly Locations</h2></a>
+                <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Pet-Friendly Locations</h2></a>
                 <p>
                     My group and I worked together to brainstorm all things about pet friendly locations.
                 </p>
