--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>CSCE 190: ABBEY ELLIOTT</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <hi>Abbey Elliott's CSCE 190 Site</h1>
@@ -27,5 +28,14 @@
                 </p>
             </section>
         </section>
+
+        <!-- Affinitiy Diagram Assignment-->
+        <section class="assignment">
+            <a href="files/personas.pdf"><img src="images/personas.png"></a>
+            <section class="ass-details">
+                <a href="files/personas.pdf"><h2>Persona: Samantha Clark for Pet-Friendly Locations</h2></a>
+                <p>
+                    A persona of a typical pet-friendly location app user.
+                </p>
     </body>
 </html>
