--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </section>
         </section>
 
-        <!-- Affinitiy Diagram Assignment-->
+        <!-- Personas Assignment-->
         <section class="assignment">
             <a href="files/personas.pdf"><img src="images/personas.png"></a>
             <section class="ass-details">
