--- a/index.html
+++ b/index.html
@@ -37,5 +37,17 @@
                 <p>
                     A persona of a typical pet-friendly location app user.
                 </p>
+            </section>
+        </section>
+         <!-- Storyboard Assignment-->
+         <section class="assignment">
+            <a href="files/storyboard.pdf"><img src="images/storyboard.png"></a>
+            <section class="ass-details">
+                <a href="files/storyboard.pdf"><h2>Storyboard: Pet-Friendly Locations</h2></a>
+                <p>
+                    The story behind the app user.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
