--- a/index.html
+++ b/index.html
@@ -49,5 +49,15 @@
                 </p>
             </section>
         </section>
+         <!-- Sketches Assignment-->
+         <section class="assignment">
+            <a href="files/sketches.pdf"><img src="images/sketches.png"></a>
+            <section class="ass-details">
+                <a href="files/sketches.pdf"><h2>Sketches</h2></a>
+                <p>
+                    Rough ideas of how the application may look.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
