--- a/index.html
+++ b/index.html
@@ -7,57 +7,65 @@
     <body>
         <hi>Abbey Elliott's CSCE 190 Site</h1>
 
-        <!-- Probelm Statement Assignment-->
-        <section class="assignment">
-            <a href="files/problem-statement.pdf"><img src="images/problem-statement.png"></a>
-            <section class="ass-details">
+        <div class = "assignments">
+            <!-- Problem Statement Assignment-->
+            <section class="assignment">
                 <a href="files/problem-statement.pdf"><h2>Problem Statement: Pet-Friendly Locations</h2></a>
-                <p>
-                Pet owners need an easy way to learn which locations in a certain city or place allow pets because oftentimes they have to forgo activities or experiences merely because they did not realize that it was not “pet-friendly” before arriving there. They need a way to put a stop to mans’ best friend being left out.
-                </p>
+                <a href="files/problem-statement.pdf"><img src="images/problem-statement.png"></a>
+                    <p>
+                    Pet owners need an easy way to learn which locations in a certain city or place allow pets because oftentimes they have to forgo activities or experiences merely because they did not realize that it was not “pet-friendly” before arriving there. They need a way to put a stop to mans’ best friend being left out.
+                    </p>
+                </section>
             </section>
-        </section>
 
-        <!-- Affinitiy Diagram Assignment-->
-        <section class="assignment">
-            <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.png"></a>
-            <section class="ass-details">
+            <!-- Affinitiy Diagram Assignment-->
+            <section class="assignment">
                 <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Pet-Friendly Locations</h2></a>
-                <p>
-                    My group and I worked together to brainstorm all things about pet friendly locations.
-                </p>
+                <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.png"></a>
+                    <p>
+                        My group and I worked together to brainstorm all things about pet friendly locations.
+                    </p>
+                </section>
             </section>
-        </section>
 
-        <!-- Personas Assignment-->
-        <section class="assignment">
-            <a href="files/personas.pdf"><img src="images/personas.png"></a>
-            <section class="ass-details">
+            <!-- Personas Assignment-->
+            <section class="assignment">
                 <a href="files/personas.pdf"><h2>Persona: Samantha Clark for Pet-Friendly Locations</h2></a>
-                <p>
-                    A persona of a typical pet-friendly location app user.
-                </p>
+                <a href="files/personas.pdf"><img src="images/personas.png"></a>
+                    <p>
+                        A persona of a typical pet-friendly location app user.
+                    </p>
+                </section>
             </section>
-        </section>
-         <!-- Storyboard Assignment-->
-         <section class="assignment">
-            <a href="files/storyboard.pdf"><img src="images/storyboard.png"></a>
-            <section class="ass-details">
+
+            <!-- Storyboard Assignment-->
+            <section class="assignment">
                 <a href="files/storyboard.pdf"><h2>Storyboard: Pet-Friendly Locations</h2></a>
-                <p>
-                    The story behind the app user.
-                </p>
+                <a href="files/storyboard.pdf"><img src="images/storyboard.png"></a>
+                    <p>
+                        The story behind the app user.
+                    </p>
             </section>
-        </section>
-         <!-- Sketches Assignment-->
-         <section class="assignment">
-            <a href="files/sketches.pdf"><img src="images/sketches.png"></a>
-            <section class="ass-details">
+
+            <!-- Sketches Assignment-->
+            <section class="assignment">
                 <a href="files/sketches.pdf"><h2>Sketches</h2></a>
-                <p>
-                    Rough ideas of how the application may look.
-                </p>
+                <a href="files/sketches.pdf"><img src="images/sketches.png"></a>
+                    <p>
+                        Rough ideas of how the application may look.
+                    </p>
+                </section>
             </section>
-        </section>
+
+            <!-- Prototype Assignment-->
+            <section class="assignment">
+                <a href="https://youtu.be/9pPvjOQuySk"><h2>Paper Prototype</h2></a>
+                <a href="https://youtu.be/9pPvjOQuySk"><img src="images/paperprototype.png"></a>
+                    <p>
+                        Paper walkthrough of the potential every screen in the application.
+                    </p>
+                </section>
+            </section>
+        </div>
     </body>
 </html>
