--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
                     </p>
                 </section>
             </section>
+            <!--Hifi proto-->
+            <section class = "assignment">
+                <a href = "files/hifiproto/preview.html"><h2>Hi-Fi Prototype</h2></a>
+                <a href = "files/hifiproto/preview.html"><img src = "images/hifiproto.png"></a>
+                <p>
+                    A scenario and tasks and the outcome of usability tests.
+                </p>
+            </section>
         </div>
     </body>
 </html>
